# kain

./: .env.sample  .gitignore  INSTALL.md  Makefile  entities.json  justfile  mempalace.yaml  pyproject.toml
.agent/: decisions.md  glossary.md  history.md  intro.md  knowledge.md  style.md  tasks.md
etc/: pre-commit.yaml
etc/lint/: pyright.json  ruff.toml  yamllint.yaml
src/kain/: __init__.py  classes.py  descriptors.py  importer.py  internals.py  monkey.py  signals.py
src/kain/properties/: __init__.py  cached_property.py  class_property.py  primitives.py  proxy_to.py
src/kain/properties/cached/: __init__.py  instance.py  klass.py  mixed.py  post.py  pre.py
tests/: test_cached.py  test_class_property.py  test_classes.py  test_descriptors.py  test_descriptors_extended.py  test_importer.py  test_internals.py  test_internals_extended.py  test_kain_init.py  test_monkey.py  test_pin_here.py  test_primitives.py  test_properties.py  test_properties_init.py  test_proxy_to.py  test_signals.py
