[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools"
]

[dependency-groups]
build = [
  "setuptools"
]
development = [
  "async-asgi-testclient>=1.4.11",
  "bandit[toml]>=1.9.3",
  "basedmypy>=2.10.0",
  "basedpyright>=1.38.0",
  "better-exceptions>=0.3.3",
  "black>=26.1.0",
  "colorama>=0.4.6",
  "grpcio-reflection>=1.71.2",
  "hexora>=0.2.2",
  "pre-commit>=4.5.1",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-dotenv>=0.5.2",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.2",
  "python-lsp-server[all]>=1.14.0",
  "refurb>=2.2.0",
  "ruff>=0.15.1",
  "structlog>=25.5.0",
  "ty>=0.0.17",
  "types-protobuf>=6.32.1.20251210",
  "typing-extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "vulture>=2.14",
  "yamlfix>=1.19.1",
  "yamllint>=1.38.0"
]
documentation = [
  "sphinx>=8.1.3",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-rtd-dark-mode>=1.3.0",
  "sphinx-rtd-theme>=3.0.2"
]

[project]
authors = [
  {name = "Alex Kalaverin", email = "alex@kalaver.in"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]
dependencies = [
]
description = "kain"
name = "kain"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.1.5"

[project.urls]
Homepage = "https://kalaver.in"

[tool.bandit]
exclude_dirs = [".venv", ".git"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "^\\s+\\.{3}"
]
show_missing = true

[tool.coverage.run]
branch = true
[tool.pylint.messages_control]
enable = "all"

[tool.refurb]
ignore = [
  123,
  149,
  176
]

[tool.ruff]
exclude = []
extend = "etc/lint/ruff.toml"

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-project",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
local-project = ["kain"]

[tool.ruff.lint.per-file-ignores]
"contrib/*" = []
"docs/*" = [
  "INP001",  # File `docs/conf.py` is part of an implicit namespace package. Add an `__init__.py`.
  "I001",  # [*] Import block is un-sorted or un-formatted
  "PTH100",  # `os.path.abspath()` should be replaced by `Path.resolve()`
  "A001"  # Variable `copyright` is shadowing a Python builtin
]
"src/*" = []
"tests/*" = []

[tool.setuptools]
packages = ["kain"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ty.rules]
possibly-missing-attribute = "ignore"
[tool.uv]
default-groups = [
  "development"
]
index-strategy = "unsafe-best-match"
